force-app/main/default/objects/Trigger_Execution_Log__c/Trigger_Execution_Log__c.object-meta.xml
<CustomObject>
    <label>Trigger Execution Log</label>
    <pluralLabel>Trigger Execution Logs</pluralLabel>
    <nameField>
        <label>Trigger Execution Log Name</label>
        <type>AutoNumber</type>
        <displayFormat>LOG-{00000}</displayFormat>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>