force-app/main/default/objects/Trigger_Execution_Log__c/fields/Created_By__c.field-meta.xml
<CustomField>
    <fullName>Created_By__c</fullName>
    <label>Created By</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipName>CreatedBy</relationshipName>
    <relationshipLabel>Created By</relationshipLabel>
</CustomField>