force-app/main/default/objects/Trigger_Execution_Log__c/fields/Execution_Duration__c.field-meta.xml
<CustomField>
    <fullName>Execution_Duration__c</fullName>
    <label>Execution Duration (ms)</label>
    <type>Number</type>
    <precision>10</precision>
    <scale>0</scale>
</CustomField>