force-app/main/default/objects/Trigger_Execution_Log__c/fields/Execution_Status__c.field-meta.xml
<CustomField>
    <fullName>Execution_Status__c</fullName>
    <label>Execution Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Success</fullName>
                <default>true</default>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Processing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>